--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "~16.9.0",
     "react-native": "^0.61.5",
     "react-native-gesture-handler": "^1.6.0",
+    "react-native-gifted-chat": "^0.13.0",
     "react-native-reanimated": "^1.7.0",
     "react-native-router-flux": "^4.2.0",
     "react-native-safe-area-context": "0.6.0",
