--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-bootstrap-validation": "^0.1.11",
     "react-dom": "~16.9.0",
     "react-native": "^0.61.5",
+    "react-native-chart-kit": "^5.5.0",
     "react-native-gesture-handler": "^1.6.0",
     "react-native-gifted-chat": "^0.13.0",
     "react-native-reanimated": "^1.7.0",
@@ -27,6 +28,7 @@
     "react-native-safe-area-context": "0.6.0",
     "react-native-safe-area-view": "^1.0.0",
     "react-native-screens": "1.0.0-alpha.23",
+    "react-native-svg": "9.13.3",
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.2.1"
