--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "expo": "~36.0.0",
+    "expo-av": "~8.0.0",
+    "expo-file-system": "~8.0.0",
     "expo-image-picker": "~8.0.1",
+    "expo-permissions": "~8.0.0",
+    "expo-speech": "~8.0.0",
     "react": "~16.9.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-bootstrap-validation": "^0.1.11",
